tests/tour-of-wgsl/pointers_as_short_names.wgsl.snap
error: Expected expression, found 'for'.

  for (var i: u32; i < arrayLength(particles_ptr); i++) {
  ~~~
error: Expected statement, found 'for'.

  for (var i: u32; i < arrayLength(particles_ptr); i++) {
  ~~~
